Fixed weird horizontal scrolling issue

--- a/style/mainStyle.css
+++ b/style/mainStyle.css
@@ -9,6 +9,10 @@ body {
   
 }
 
+.rowFix{
+  --bs-gutter-x: 0rem;
+}
+
 /*Colors*/
 .textColor {
   color: #ccd6f6;
